fix: restore 518 skills truncated in bulk metadata update (0b76b24bd)
commit 0b76b24bd accidentally truncated skill body content during
a bulk frontmatter update. The generate-routing-metadata.py script
discarded everything after the YAML frontmatter, leaving 535 skills
as <3KB stubs.

This commit restores all 518 still-damaged files by combining:
- Current frontmatter (with archetypes/anti_triggers/response_profile)
- Pre-truncation body content from 0b76b24bd^ parent

17 files were skipped (already repaired by subsequent commits
or stayed above 3KB threshold).
Only 9 of the 535 truncated skills had been previously fixed.